2006-02-14  Tor Lillqvist  <tml@novell.com>

	* glib/tmpl/iochannels.sgml: Document some Windows-specific issues.

	* glib/glib-sections.txt: Move three Windows-specific functions
	that now are documented from being Private to the correct section.

2006-02-10  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.9.6 ===

2006-02-10  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/date.sgml: Fix a typo (#329123, Kjartan Maraas)

2006-01-27  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.9.5 ===

2006-01-27  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt: 
	* glib/tmpl/memory.sgml: Document g_mem_gc_friendly.

2006-01-26  Matthias Clasen  <mclasen@redhat.com>

	* gobject/tut_tools.xml: Mention g_trap_object_ref

	* glib/running.sgml: Add g_trap variables to the index.
	Mention conditional breakpoints as an alternative.

Wed Jan 25 17:32:22 2006  Tim Janik  <timj@gtk.org>

	* glib/tmpl/memory_slices.sgml: link to G_DEBUG/G_SLICE where appropriate.

Wed Jan 25 17:12:47 2006  Tim Janik  <timj@gtk.org>

	* glib/running.sgml: documented G_SLICE=always-malloc and
	G_DEBUG=gc-friendly. added anchors for each env var.

2006-01-18  Matthias Clasen  <mclasen@redhat.com>
	
	* === Released 2.9.4 ===

2006-01-18  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/scanner.sgml: Add a note explaining peculiarities
	of peek_token wrt to scope changes.  (#307922)
	
2006-01-17  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/memory.sgml: Add a note about casting the results
	of g_new() and g_new0().

2006-01-16  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.9.3 ===

2006-01-12  Federico Mena Quintero  <federico@ximian.com>

	* glib/file-name-encodings.sxd: Replaced with the correct file.

	* glib/file-name-encodings.png: Huh?  This was a 6-byte file.
	Replaced it with the correct one.

2006-01-07  Stefan Kost  <ensonic@users.sf.net>

	* gobject/tut_gtype.xml:
	  fix internal link, little XXX cleanup
